# FileMoverShellExtension

./: CMakeLists.txt  FileMoverShellExtension.cpp  FileMoverShellExtension.h  README.md  README.txt
src/: config.h  setup.cpp  utils.cpp  utils.h
src/contextMenu/: contextMenu.cpp  contextMenu.h  contextMenuFactory.cpp  contextMenuFactory.h  dll.cpp  dll.def
